# cat_root_sys_ROS2

./: .gitignore  README.md  cat-ui-system.desktop  cyclonedds.xml  fastdds_relay.xml  install.sh  run.sh
cat_trash_box/meshes/: futa_1.stl
catui/CAT-UI-ROS2node/: CAT-UI
catui/CAT-UI-ROS2node/data/: funwariround-48.vlw
catui/CAT-UI-ROS2node/data/ipc/: test.json
catui/CAT-UI-ROS2node/source/: CAT_UI.pde  CompositeFacePart.java  EarFlapDecorator.java  EarTwitchDecorator.java  FaceIPC.java  FaceStates.java  NikoEyesDecorator.java  QuestionMarkDecorator.java  SparkleDecorator.java  TextDisplay.java  UICommand.java  UIComponent.java  Whiskers.java
ros/humble/lib/: libfastcdr.so.1.0.24
ros/humble/lib/aarch64-linux-gnu/: libcycloneddsidl.so.0.10.5  libddsc.so.0.10.5  liburdfdom_model.so.3.0  liburdfdom_model_state.so.3.0  liburdfdom_sensor.so.3.0  liburdfdom_world.so.3.0
ros/humble/lib/create_driver/: create_driver
ros/humble/lib/diagnostic_updater/: example
ros/humble/lib/image_transport/: list_transports  republish
ros/humble/lib/joy/: game_controller_node  joy_enumerate_devices  joy_node
ros/humble/lib/joy_teleop/: incrementer_server  (+1 more)
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/log/: latest_build
ros2_ws/src/cat_robot_bringup/: .gitignore  README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/catui_bridge/: package.xml  setup.cfg  setup.py
ros2_ws/src/catui_bridge/catui_bridge/: ui_bridge_node.py
ros2_ws/src/catui_bridge/config/: catui_bridge.yaml
ros2_ws/src/catui_msgs/: CMakeLists.txt
ui/catui/CAT-UI-ROS2node/: README.md
(+910 files in other folders)
